# sdl3-boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_LICENSES.txt  vcpkg.json
doc/: architecture.md  development.md  game_loop.md  using_as_boilerplate.md
src/sdl3boilerplate/app/: main.cpp  platform.cpp  platform.hpp
src/sdl3boilerplate/foundation/: config.hpp  fixed_step_scheduler.cpp  fixed_step_scheduler.hpp  math.hpp  time.hpp
src/sdl3boilerplate/input/: input_state.hpp  input_translator.cpp  input_translator.hpp
src/sdl3boilerplate/render/: renderer.cpp  renderer.hpp
src/sdl3boilerplate/sim/: game.cpp  game.hpp  game_input.hpp  game_state.hpp  player.cpp  player.hpp
tests/foundation/: test_fixed_step_scheduler.cpp  test_time_constants.cpp
tests/input/: test_input_translator.cpp
tests/render/: test_renderer.cpp
tests/sim/: test_game_movement.cpp  test_player_bounds.cpp
tools/windows/: analyze.ps1  build.ps1  common.ps1  format.ps1  test.ps1
